--- a/quiz/app/src/main/AndroidManifest.xml
+++ b/quiz/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.example.jetes.quiz">
 
     <application
-        android:hardwareAccelerated="false"
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -17,7 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FirstQuestion"></activity>
+        <activity android:name=".FirstQuestion" />
+        <activity android:name=".Puntuation"></activity>
     </application>
 
 </manifest>
