--- a/QuizPro/app/src/main/AndroidManifest.xml
+++ b/QuizPro/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".Menu" />
         <activity android:name=".Configuration" />
-        <activity android:name=".Questions"></activity>
+        <activity android:name=".Questions" />
+        <activity android:name=".Clasification"></activity>
     </application>
 
 </manifest>
