Modificada Configuración, para introducir un botón perfiles
Nueva actividad perfiles:
    -Se muesta la lista de los perfiles actuales con foto,Nickname, Numero partidas, fecha de última partida
    - Falta copiar aqui la creación de un nuevo usuario

--- a/QuizPro/app/src/main/AndroidManifest.xml
+++ b/QuizPro/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".Menu" />
         <activity android:name=".Configuration" />
         <activity android:name=".Questions" />
-        <activity android:name=".Clasification"></activity>
+        <activity android:name=".Clasification" />
+        <activity android:name=".Profile"></activity>
     </application>
 
 </manifest>
