--- a/QuizPro/app/src/main/AndroidManifest.xml
+++ b/QuizPro/app/src/main/AndroidManifest.xml
@@ -13,19 +13,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Intro">
+        <activity android:name=".Intro"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Menu" />
-        <activity android:name=".Configuration" />
-        <activity android:name=".Questions" />
-        <activity android:name=".Clasification" />
-        <activity android:name=".Profile" />
-        <activity android:name=".EndGame"></activity>
+        <activity android:name=".Menu"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Configuration"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Questions"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Clasification"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Profile"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".EndGame"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
