--- a/QuizPro/app/src/main/AndroidManifest.xml
+++ b/QuizPro/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/web"
-        android:label="@string/app_name"
+        android:icon="@drawable/app_logo"
+        android:label="Spiderman Quiz"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
