--- a/QuizPro/app/src/main/AndroidManifest.xml
+++ b/QuizPro/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/app_logo"
+        android:logo="@drawable/app_logo"
         android:label="Spiderman Quiz"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Intro"
