--- a/Scaffold/app/src/main/AndroidManifest.xml
+++ b/Scaffold/app/src/main/AndroidManifest.xml
@@ -4,8 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/a4"
+        android:logo="@drawable/a4"
+        android:label="Space War"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
