--- a/Juego/Assembly-CSharp.csproj
+++ b/Juego/Assembly-CSharp.csproj
@@ -61,17 +61,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\BlackCounter.cs" />
-    <Compile Include="Assets\DeleteGameObject.cs" />
-    <Compile Include="Assets\GameManager.cs" />
     <Compile Include="Assets\JsonClasses\AllPunts.cs" />
     <Compile Include="Assets\JsonClasses\SinglePunt.cs" />
-    <Compile Include="Assets\MenuManager.cs" />
     <Compile Include="Assets\Scripts\AcelerometerInput.cs" />
+    <Compile Include="Assets\Scripts\BlackCounter.cs" />
+    <Compile Include="Assets\Scripts\DeleteGameObject.cs" />
+    <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Generator.cs" />
     <Compile Include="Assets\Scripts\KeyboardControl.cs" />
     <Compile Include="Assets\Scripts\Leaderboard.cs" />
-    <Compile Include="Assets\WhiteCounter.cs" />
+    <Compile Include="Assets\Scripts\MenuManager.cs" />
+    <Compile Include="Assets\Scripts\WhiteCounter.cs" />
     <None Include="Assets\JsonDotNet\link.xml" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>D:/Git/Quiz/Juego/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
@@ -280,14 +280,14 @@
     <Reference Include="UnityEngine.SpatialTracking">
       <HintPath>D:/ProgramFiles/Unity/2018.2.17f1/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>D:/Git/Quiz/Juego/Assets/JsonDotNet/Assemblies/Standalone/Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.Analytics">
       <HintPath>C:/Users/alber/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.16/UnityEngine.Analytics.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.StandardEvents">
       <HintPath>C:/Users/alber/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.13/UnityEngine.StandardEvents.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>D:/Git/Quiz/Juego/Assets/JsonDotNet/Assemblies/Standalone/Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>D:/ProgramFiles/Unity/2018.2.17f1/Editor/Data/MonoBleedingEdge/lib/mono/unity/mscorlib.dll</HintPath>
